--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+v0.1.8
+
+* bug fixes
+
+v0.1.7
+
+* updated dependencies
+
 v0.1.6
 
 * fixed crash on connect when using watch expressions (Issue 25)
