AUTHORS: updated Stronglooper's emails

--- a/AUTHORS
+++ b/AUTHORS
@@ -5,9 +5,8 @@ Glenn Block <glenn.block@gmail.com>
 Ionuț G. Stan <ionut.g.stan@gmail.com>
 Kasper Ligaard <kasperligaard@gmail.com>
 Mark Constable <markc@renta.net>
-Michael Schoonmaker <michael.r.schoonmaker@gmail.com>
-Miroslav Bajtos <miro.bajtos@gmail.com>
-Miroslav Bajtoš <miro.bajtos@gmail.com>
+Michael Schoonmaker <michael@strongloop.com>
+Miroslav Bajtos <miroslav@strongloop.com>
 Panagiotis Astithas <pastith@gmail.com>
 Philip Tellis <philip.tellis@gmail.com>
-Sam Roberts <vieuxtech@gmail.com>
+Sam Roberts <sam@strongloop.com>
