Updated AUTHORS list.

--- a/AUTHORS
+++ b/AUTHORS
@@ -8,5 +8,6 @@ Mark Constable <markc@renta.net>
 Michael Schoonmaker <michael@strongloop.com>
 Miroslav Bajtos <miroslav@strongloop.com>
 Panagiotis Astithas <pastith@gmail.com>
+Peter Flannery <flannery.peter@ntlworld.com>
 Philip Tellis <philip.tellis@gmail.com>
 Sam Roberts <sam@strongloop.com>
