--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,24 @@
+2013-08-12, Version 0.3.3
+
+* package.json: upgraded to express 3.3 (Miroslav Bajtos)
+
+* README: added section 'Contributing Code' (Miroslav Bajtos)
+
+* README: Updated "Thanks" section (Miroslav Bajtos)
+
+* Updated AUTHORS list. (Miroslav Bajtos)
+
+* DebugServer: Fix for source map paths on win (pflannery)
+
+* README: added gemnasium dependency status badge (Miroslav Bajtos)
+
+* package.json: added `lint` script (Miroslav Bajtos)
+
+* README: link to issue #146 (Miroslav Bajtoš)
+
+* PageAgent: improved main-file detection (Miroslav Bajtos)
+
+
 2013-07-22, Version 0.3.2
 
 * Overrides: show main app file (Miroslav Bajtos)
