--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,7 @@
 Danny Coates <dannycoates@gmail.com>
 
 3y3 <3y3@bk.ru>
+Adam Hořčica <horcicaa@gmail.com>
 Akzhan Abdulin <akzhan.abdulin@gmail.com>
 Glenn Block <glenn.block@gmail.com>
 Ionuț G. Stan <ionut.g.stan@gmail.com>
