--- a/AUTHORS
+++ b/AUTHORS
@@ -3,6 +3,7 @@ Danny Coates <dannycoates@gmail.com>
 3y3 <3y3@bk.ru>
 Adam Hořčica <horcicaa@gmail.com>
 Akzhan Abdulin <akzhan.abdulin@gmail.com>
+Gary Katsevman <git@gkatsev.com>
 Glenn Block <glenn.block@gmail.com>
 Ionuț G. Stan <ionut.g.stan@gmail.com>
 Kasper Ligaard <kasperligaard@gmail.com>
