--- a/AUTHORS
+++ b/AUTHORS
@@ -8,6 +8,7 @@ Glenn Block <glenn.block@gmail.com>
 Ionuț G. Stan <ionut.g.stan@gmail.com>
 Kasper Ligaard <kasperligaard@gmail.com>
 Mark Constable <markc@renta.net>
+Matthew O'Riordan <matthew.oriordan@gmail.com>
 Michael Schoonmaker <michael@strongloop.com>
 Miroslav Bajtos <miroslav@strongloop.com>
 Panagiotis Astithas <pastith@gmail.com>
