--- a/AUTHORS
+++ b/AUTHORS
@@ -15,3 +15,4 @@ Panagiotis Astithas <pastith@gmail.com>
 Peter Flannery <flannery.peter@ntlworld.com>
 Philip Tellis <philip.tellis@gmail.com>
 Sam Roberts <sam@strongloop.com>
+ssafejava <s@safejava.com>
