--- a/AUTHORS
+++ b/AUTHORS
@@ -3,6 +3,8 @@ Danny Coates <dannycoates@gmail.com>
 3y3 <3y3@bk.ru>
 Adam Hořčica <horcicaa@gmail.com>
 Akzhan Abdulin <akzhan.abdulin@gmail.com>
+cattail <zhongchiyu@gmail.com>
+Dave <badave@gmail.com>
 Gary Katsevman <git@gkatsev.com>
 Glenn Block <glenn.block@gmail.com>
 Ionuț G. Stan <ionut.g.stan@gmail.com>
