--- a/AUTHORS
+++ b/AUTHORS
@@ -5,9 +5,11 @@ Adam Hořčica <horcicaa@gmail.com>
 Akzhan Abdulin <akzhan.abdulin@gmail.com>
 cattail <zhongchiyu@gmail.com>
 Dave <badave@gmail.com>
+Dick Hardt <dickhardt@gmail.com>
 Gary Katsevman <git@gkatsev.com>
 Glenn Block <glenn.block@gmail.com>
 Ionuț G. Stan <ionut.g.stan@gmail.com>
+Karan Batra-Daitch <karanganesha04@gmail.com>
 Kasper Ligaard <kasperligaard@gmail.com>
 Mark Constable <markc@renta.net>
 Matthew O'Riordan <matthew.oriordan@gmail.com>
@@ -17,4 +19,5 @@ Panagiotis Astithas <pastith@gmail.com>
 Peter Flannery <flannery.peter@ntlworld.com>
 Philip Tellis <philip.tellis@gmail.com>
 Sam Roberts <sam@strongloop.com>
+Sergey Krilov <serg.kr@gmail.com>
 ssafejava <s@safejava.com>
