--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,5 @@
 Danny Coates <dannycoates@gmail.com>
+Miroslav Bajtoš <miroslav@strongloop.com>
 
 3y3 <3y3@bk.ru>
 Adam Hořčica <horcicaa@gmail.com>
@@ -11,11 +12,12 @@ Glenn Block <glenn.block@gmail.com>
 Ionuț G. Stan <ionut.g.stan@gmail.com>
 Karan Batra-Daitch <karanganesha04@gmail.com>
 Kasper Ligaard <kasperligaard@gmail.com>
+Lennon Pulda-Grealy <lennon_puldagrealy@apple.com>
 Mark Constable <markc@renta.net>
 Matthew O'Riordan <matthew.oriordan@gmail.com>
 Michael Schoonmaker <michael@strongloop.com>
-Miroslav Bajtos <miroslav@strongloop.com>
 Panagiotis Astithas <pastith@gmail.com>
+Peter Lyons <pete@peterlyons.com>
 Peter Flannery <flannery.peter@ntlworld.com>
 Philip Tellis <philip.tellis@gmail.com>
 Sam Roberts <sam@strongloop.com>
