--- a/AUTHORS
+++ b/AUTHORS
@@ -13,6 +13,8 @@ Gary Katsevman <git@gkatsev.com>
 Glenn Block <glenn.block@gmail.com>
 Ionică Bizău <bizauionica@yahoo.com>
 Ionuț G. Stan <ionut.g.stan@gmail.com>
+Ivan Baktsheev <dot.and.thing@gmail.com>
+junecoder <githubposting@gmail.com>
 Karan Batra-Daitch <karanganesha04@gmail.com>
 Kasper Ligaard <kasperligaard@gmail.com>
 Kenneth Auchenberg <kenneth@auchenberg.dk>
